서브페이지 수정, 로그인 css

--- a/capstone-design/JSP/index.html
+++ b/capstone-design/JSP/index.html
@@ -26,7 +26,13 @@
               <a>두잔 캡슐</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="">sub</a></li>
+                  <li><a href="">시즌한정</a></li>
+                  <li><a href="">시그니처</a></li>
+                  <li><a href="">블렌딩</a></li>
+                  <li><a href="">오리지널</a></li>
+                  <li><a href="">디카페인</a></li>
+                  <li><a href="">베버리지 / 논커피</a></li>
+                  <li><a href="">선물 패키지</a></li>
                 </ul>
               </div>
             </li>
@@ -34,7 +40,10 @@
               <a>커피 이야기</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="#">sub</a></li>
+                  <li><a href="#">캡슐 조합 리뷰</a></li>
+                  <li><a href="#">원두소개</a></li>
+                  <li><a href="#">커피 응용 레시피</a></li>
+                  <li><a href="#">나와 어울리는 커피</a></li>
                 </ul>
               </div>
             </li>
@@ -42,7 +51,8 @@
               <a>두잔 이야기</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="#">sub</a></li>
+                  <li><a href="#">두 잔의 여유</a></li>
+                  <li><a href="#">두 잔의 환경가치</a></li>
                 </ul>
               </div>
             </li>
