커스텀카트 등록 삭제 등 카트 최종수정

--- a/capstone-design/JSP/index.html
+++ b/capstone-design/JSP/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,52 +14,52 @@
     </div>
     <div id="header">
       <div class="formbox">
-        <input type="text" placeholder="°Ë»ö">
+        <input type="text" placeholder="ê²€ìƒ‰">
         <div class="topmenuWrap">
           <ul class="topmenu">
             <li>
-              <a>Ä¸½¶ Ä¿½ºÅÒ</a>
+              <a>ìº¡ìŠ ì»¤ìŠ¤í…€</a>
             </li>
             <li>
-              <a>µÎÀÜ Ä¸½¶</a>
+              <a>ë‘ìž” ìº¡ìŠ</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="">½ÃÁðÇÑÁ¤</a></li>
-				  <li><a href="">½Ã±×´ÏÃ³</a></li>
-				  <li><a href="">ºí·»µù</a></li>
-				  <li><a href="">¿À¸®Áö³Î</a></li>
-				  <li><a href="">µðÄ«ÆäÀÎ</a></li>
-				  <li><a href="">º£¹ö¸®Áö / ³íÄ¿ÇÇ</a></li>
-                  <li><a href="">¼±¹° ÆÐÅ°Áö</a></li>
+                  <li><a href="">ì‹œì¦Œí•œì •</a></li>
+				  <li><a href="">ì‹œê·¸ë‹ˆì²˜</a></li>
+				  <li><a href="">ë¸”ë Œë”©</a></li>
+				  <li><a href="">ì˜¤ë¦¬ì§€ë„</a></li>
+				  <li><a href="">ë””ì¹´íŽ˜ì¸</a></li>
+				  <li><a href="">ë² ë²„ë¦¬ì§€ / ë…¼ì»¤í”¼</a></li>
+                  <li><a href="">ì„ ë¬¼ íŒ¨í‚¤ì§€</a></li>
                 </ul>
               </div>
             </li>
             <li>
-              <a>Ä¿ÇÇ ÀÌ¾ß±â</a>
+              <a>ì»¤í”¼ ì´ì•¼ê¸°</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="#">Ä¸½¶ Á¶ÇÕ ¸®ºä</a></li>
-                  <li><a href="#">¿øµÎ¼Ò°³</a></li>
-                  <li><a href="#">Ä¿ÇÇ ÀÀ¿ë ·¹½ÃÇÇ</a></li>
-                  <li><a href="#">³ª¿Í ¾î¿ï¸®´Â Ä¿ÇÇ</a></li>
+                  <li><a href="#">ìº¡ìŠ ì¡°í•© ë¦¬ë·°</a></li>
+                  <li><a href="#">ì›ë‘ì†Œê°œ</a></li>
+                  <li><a href="#">ì»¤í”¼ ì‘ìš© ë ˆì‹œí”¼</a></li>
+                  <li><a href="#">ë‚˜ì™€ ì–´ìš¸ë¦¬ëŠ” ì»¤í”¼</a></li>
                 </ul>
               </div>
             </li>
             <li>
-              <a>µÎÀÜ ÀÌ¾ß±â</a>
+              <a>ë‘ìž” ì´ì•¼ê¸°</a>
               <div class="submenu">
                 <ul id="productMenu">
-                  <li><a href="#">µÎ ÀÜÀÇ ¿©À¯</a></li>
-                  <li><a href="#">µÎ ÀÜÀÇ È¯°æ°¡Ä¡</a></li>
+                  <li><a href="#">ë‘ ìž”ì˜ ì—¬ìœ </a></li>
+                  <li><a href="#">ë‘ ìž”ì˜ í™˜ê²½ê°€ì¹˜</a></li>
                 </ul>
               </div>
             </li>
           </ul>
         </div>
         <div class="nav_top">
-          <span class="quick_menu"><a href="member/login.jsp">·Î±×ÀÎ</a></span>
-          <span class="quick_menu"><a href="">È¸¿ø°¡ÀÔ</a></span>
-          <span class="quick_menu"><a href="">°í°´¼¾ÅÍ</a></span>
+          <span class="quick_menu"><a href="member/login.jsp">ë¡œê·¸ì¸</a></span>
+          <span class="quick_menu"><a href="">íšŒì›ê°€ìž…</a></span>
+          <span class="quick_menu"><a href="">ê³ ê°ì„¼í„°</a></span>
         </div>
     </div>
 		</div>
@@ -88,8 +86,8 @@
             </div>
             <div class="bestCapsule_right">
               <div class="bestTitle">
-                <h2>µÎÀÜÀÇ ¸íÀÛ Ä¸½¶ 3¼±</h2>
-                <span>µÎÀÜ¿¡¼­ °¡Àå ÀÎ±â°¡ ¸¹Àº ¸íÀÛ Ä¸½¶ BEST3¸¦ ¼Ò°³ÇÕ´Ï´Ù.</span>
+                <h2>ë‘ìž”ì˜ ëª…ìž‘ ìº¡ìŠ 3ì„ </h2>
+                <span>ë‘ìž”ì—ì„œ ê°€ìž¥ ì¸ê¸°ê°€ ë§Žì€ ëª…ìž‘ ìº¡ìŠ BEST3ë¥¼ ì†Œê°œí•©ë‹ˆë‹¤.</span>
               </div>
               <div class="bestOption">
                 <div class="option">
@@ -115,8 +113,8 @@
           <div class="signature_timeOrigin">
             <img class="cignatureText" src="../images/DOZAN_signature_origin.png" alt="">
             <div class="signatureTitle">
-              <p>µÎÀÜÀÇ Ã¹¹øÂ° ½Ã±×´ÏÃ³ Ä¸½¶ Ä¿ÇÇ</p>
-              <h2>µÎÀÜ ¿À¸®Áø</h2>
+              <p>ë‘ìž”ì˜ ì²«ë²ˆì§¸ ì‹œê·¸ë‹ˆì²˜ ìº¡ìŠ ì»¤í”¼</p>
+              <h2>ë‘ìž” ì˜¤ë¦¬ì§„</h2>
             </div>
             <div class="signature_time">
               <div class="time morning">
@@ -131,13 +129,13 @@
             </div>
             <div class="signature_explamation">
               <p>
-                ¾ÆÄ§, Á¡½É, Àú³áÀÌ¶ó´Â »ï½Ã¸¦ Å×¸¶·Î<br>
-                ½Ã°£´ë º° ¸¶½Ã±â ÁÁÀº ¿øµÎ¿Í ·Î½ºÆÃ ´Ü°è¸¦ ¼±Á¤ÇØ Åº»ýÇÑ<br>
-                µÎÀÜÀÇ ½Ã±×´ÏÃ³ ¸Þ´º<br>
-                <span>¾ÆÄ§ ¡¤ Á¡½É ¡¤ Àú³á</span>
+                ì•„ì¹¨, ì ì‹¬, ì €ë…ì´ë¼ëŠ” ì‚¼ì‹œë¥¼ í…Œë§ˆë¡œ<br>
+                ì‹œê°„ëŒ€ ë³„ ë§ˆì‹œê¸° ì¢‹ì€ ì›ë‘ì™€ ë¡œìŠ¤íŒ… ë‹¨ê³„ë¥¼ ì„ ì •í•´ íƒ„ìƒí•œ<br>
+                ë‘ìž”ì˜ ì‹œê·¸ë‹ˆì²˜ ë©”ë‰´<br>
+                <span>ì•„ì¹¨ Â· ì ì‹¬ Â· ì €ë…</span>
               </p>
               <p>
-                1st(10°³ÀÔ) ±ÕÀÏ°¡ 9,999¿ø
+                1st(10ê°œìž…) ê· ì¼ê°€ 9,999ì›
               </p>
             </div>
             
@@ -146,22 +144,22 @@
           <div class="signature_Origin">
             <div class="origin_left">
                <img src="../images/capsule.png" alt="">
-               <button>ÀÚ¼¼È÷ º¸±â</button>
+               <button>ìžì„¸ížˆ ë³´ê¸°</button>
             </div>
             <div class="origin_right">
-              <div class="originTitle">µÎÀÜ ½Ã±×´ÏÃ³ ¿À¸®Áø / ·Î½ºÆÃ ÇÏÀÌ</div>
+              <div class="originTitle">ë‘ìž” ì‹œê·¸ë‹ˆì²˜ ì˜¤ë¦¬ì§„ / ë¡œìŠ¤íŒ… í•˜ì´</div>
               <div class="origin_explanation">
                 <p>
-                  ¸¶ÀÏµåÇÏ°í ºÎµå·¯¿î ¸ÀÀÌ Æ¯Â¡ÀÎ ºê¶óÁú ¿øµÎ »êÅä½º¸¦<br>
-                  »ç¿ëÇÏ¿© »ê¹Ì°¡ ¾ïÁ¦µÇ°í ¾´¸À°ú ´Ü¸ÀÀÌ Áõ°¡ÇØ<br>
-                  ÀüÃ¼ÀûÀ¸·Î ±ÕÇüÀâÈù ¸ÀÀ» ´À³¥ ¼ö ÀÖ´Â<br>
-                  µÎÀÜÀÇ ´ëÇ¥ ½Ã±×´ÏÃ³ ¸Þ´ºÀÔ´Ï´Ù.
+                  ë§ˆì¼ë“œí•˜ê³  ë¶€ë“œëŸ¬ìš´ ë§›ì´ íŠ¹ì§•ì¸ ë¸Œë¼ì§ˆ ì›ë‘ ì‚°í† ìŠ¤ë¥¼<br>
+                  ì‚¬ìš©í•˜ì—¬ ì‚°ë¯¸ê°€ ì–µì œë˜ê³  ì“´ë§›ê³¼ ë‹¨ë§›ì´ ì¦ê°€í•´<br>
+                  ì „ì²´ì ìœ¼ë¡œ ê· í˜•ìž¡ížŒ ë§›ì„ ëŠë‚„ ìˆ˜ ìžˆëŠ”<br>
+                  ë‘ìž”ì˜ ëŒ€í‘œ ì‹œê·¸ë‹ˆì²˜ ë©”ë‰´ìž…ë‹ˆë‹¤.
                 </p>
               </div>
-              <div class="price">9,999 ¿ø</div>
+              <div class="price">9,999 ì›</div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>·Î½ºÆÃ</strong>
+                  <strong>ë¡œìŠ¤íŒ…</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
@@ -172,7 +170,7 @@
               </div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>°¨µµ</strong>
+                  <strong>ê°ë„</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
@@ -183,7 +181,7 @@
               </div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>»ê¹Ì</strong>
+                  <strong>ì‚°ë¯¸</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
@@ -197,22 +195,22 @@
           <div class="signature_Origin">
             <div class="origin_left">
                <img src="../images/capsule2.png" alt="">
-               <button>ÀÚ¼¼È÷ º¸±â</button>
+               <button>ìžì„¸ížˆ ë³´ê¸°</button>
             </div>
             <div class="origin_right">
-              <div class="originTitle">µÎÀÜ ½Ã±×´ÏÃ³ ºí·£µå / ·Î½ºÆÃ ½ÃÆ¼</div>
+              <div class="originTitle">ë‘ìž” ì‹œê·¸ë‹ˆì²˜ ë¸”ëžœë“œ / ë¡œìŠ¤íŒ… ì‹œí‹°</div>
               <div class="origin_explanation">
                 <p>
-                  ¸¶ÀÏµåÇÏ°í ºÎµå·¯¿î ¸ÀÀÌ Æ¯Â¡ÀÎ ºê¶óÁú ¿øµÎ »êÅä½º¸¦<br>
-                  »ç¿ëÇÏ¿© »ê¹Ì°¡ ¾ïÁ¦µÇ°í ¾´¸À°ú ´Ü¸ÀÀÌ Áõ°¡ÇØ<br>
-                  ÀüÃ¼ÀûÀ¸·Î ±ÕÇüÀâÈù ¸ÀÀ» ´À³¥ ¼ö ÀÖ´Â<br>
-                  µÎÀÜÀÇ ´ëÇ¥ ½Ã±×´ÏÃ³ ¸Þ´ºÀÔ´Ï´Ù.
+                  ë§ˆì¼ë“œí•˜ê³  ë¶€ë“œëŸ¬ìš´ ë§›ì´ íŠ¹ì§•ì¸ ë¸Œë¼ì§ˆ ì›ë‘ ì‚°í† ìŠ¤ë¥¼<br>
+                  ì‚¬ìš©í•˜ì—¬ ì‚°ë¯¸ê°€ ì–µì œë˜ê³  ì“´ë§›ê³¼ ë‹¨ë§›ì´ ì¦ê°€í•´<br>
+                  ì „ì²´ì ìœ¼ë¡œ ê· í˜•ìž¡ížŒ ë§›ì„ ëŠë‚„ ìˆ˜ ìžˆëŠ”<br>
+                  ë‘ìž”ì˜ ëŒ€í‘œ ì‹œê·¸ë‹ˆì²˜ ë©”ë‰´ìž…ë‹ˆë‹¤.
                 </p>
               </div>
-              <div class="price">9,999 ¿ø</div>
+              <div class="price">9,999 ì›</div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>·Î½ºÆÃ</strong>
+                  <strong>ë¡œìŠ¤íŒ…</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
@@ -223,7 +221,7 @@
               </div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>°¨µµ</strong>
+                  <strong>ê°ë„</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
@@ -234,7 +232,7 @@
               </div>
               <div class="progress-wrap">
                 <h3 class="progress-name">
-                  <strong>»ê¹Ì</strong>
+                  <strong>ì‚°ë¯¸</strong>
                 </h3>
                 <div class="progress">
                   <div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
@@ -255,7 +253,7 @@
         <div class="cont">
           <div class="section-title">
             <img src="../images/binder.png" alt="">
-            <p class="title">ÀÎ±â»óÇ° ¸ð¾Æº¸±â</p>
+            <p class="title">ì¸ê¸°ìƒí’ˆ ëª¨ì•„ë³´ê¸°</p>
             <img src="../images/binder.png" alt="">
           </div>
           <div class="goods-list">
@@ -328,49 +326,49 @@
     <footer>
       <div class="footer1">
         <ul>
-          <li><a href="">È¸»ç¼Ò°³</a></li>
-          <li><a href="">ÀÌ¿ë¾à°ü</a></li>
-          <li><a href="">°³ÀÎÁ¤º¸Ãë±Þ¹æÄ§ </a></li>
-          <li><a href="">°í°´¼¾ÅÍ</a></li>
+          <li><a href="">íšŒì‚¬ì†Œê°œ</a></li>
+          <li><a href="">ì´ìš©ì•½ê´€</a></li>
+          <li><a href="">ê°œì¸ì •ë³´ì·¨ê¸‰ë°©ì¹¨ </a></li>
+          <li><a href="">ê³ ê°ì„¼í„°</a></li>
         </ul>
       </div>
       <div class="footer2">
         <div class="call_center">
-          <p class="footer_title">°í°´¸¸Á·¼¾ÅÍ</p>
+          <p class="footer_title">ê³ ê°ë§Œì¡±ì„¼í„°</p>
           <p class="footer_text">
             <span class="tell"><img src="../images/tell.png" alt=""></span><span id="tell_number">02-456-789</span><br>
-            <span class="footer_bold">»ó´ã½Ã°£  </span>10:00 ~ 18:00<br>
-            <span class="footer_bold">¹®ÀÚ»ó´ã  </span>Ä«Ä«¿ÀÅå ÇÃ·¯½º Ä£±¸ µî·Ï<br>
-            ¹ÝÇ° ¾È³»´Â ÇØ´ç »óÇ° ÆäÀÌÁö¸¦ Âü°íÇØÁÖ¼¼¿ä
+            <span class="footer_bold">ìƒë‹´ì‹œê°„  </span>10:00 ~ 18:00<br>
+            <span class="footer_bold">ë¬¸ìžìƒë‹´  </span>ì¹´ì¹´ì˜¤í†¡ í”ŒëŸ¬ìŠ¤ ì¹œêµ¬ ë“±ë¡<br>
+            ë°˜í’ˆ ì•ˆë‚´ëŠ” í•´ë‹¹ ìƒí’ˆ íŽ˜ì´ì§€ë¥¼ ì°¸ê³ í•´ì£¼ì„¸ìš”
           </p>
         </div>
   
         <div class="company">
-          <p class="footer_title">È¸»ç Á¤º¸</p>
+          <p class="footer_title">íšŒì‚¬ ì •ë³´</p>
           <p class="footer_text">
-            <span class="footer_bold">È¸»ç¸í</span>(ÁÖ)µÎÀÜ / µÎ ÀÜÀÇ ¿©À¯<br>
-            <span class="footer_bold">´ëÇ¥</span>¼­¹ÎÈñ<br>
-            <span class="footer_bold">´ëÇ¥ÀüÈ­</span>02-456-789<br>
-            <span class="footer_bold">ÁÖ¼Ò</span>¼­¿ïÆ¯º°½Ã ¸¶Æ÷±¸<br>
-            <span class="footer_bold">ÀÌ¸ÞÀÏ</span>alslalsl_06@naver.com<br>
+            <span class="footer_bold">íšŒì‚¬ëª…</span>(ì£¼)ë‘ìž” / ë‘ ìž”ì˜ ì—¬ìœ <br>
+            <span class="footer_bold">ëŒ€í‘œ</span>ì„œë¯¼í¬<br>
+            <span class="footer_bold">ëŒ€í‘œì „í™”</span>02-456-789<br>
+            <span class="footer_bold">ì£¼ì†Œ</span>ì„œìš¸íŠ¹ë³„ì‹œ ë§ˆí¬êµ¬<br>
+            <span class="footer_bold">ì´ë©”ì¼</span>alslalsl_06@naver.com<br>
           </p>
         </div>
   
         <div class="delivery">
-          <p class="footer_title">¹è¼Û¾È³»</p>
+          <p class="footer_title">ë°°ì†¡ì•ˆë‚´</p>
           <p class="footer_text">
-            CJ ´ëÇÑÅë¿î(TEL 1588-4321)<br>
-            ¹è¼Û »óÈ²Àº ÅÃ¹è»ç È¨ÆäÀÌÁö¸¦ ÂüÁ¶ÇØÁÖ¼¼¿ä<br>
-            <a href="#">¹è¼Û »óÈ² È®ÀÎÇÏ±â></a>
+            CJ ëŒ€í•œí†µìš´(TEL 1588-4321)<br>
+            ë°°ì†¡ ìƒí™©ì€ íƒë°°ì‚¬ í™ˆíŽ˜ì´ì§€ë¥¼ ì°¸ì¡°í•´ì£¼ì„¸ìš”<br>
+            <a href="#">ë°°ì†¡ ìƒí™© í™•ì¸í•˜ê¸°></a>
           </p>
         </div>
       </div>
       <div class="footer3">
         <div class="shopping_menu">
-          <p class="footer_title">¼îÇÎ ¸Þ´º</p>
+          <p class="footer_title">ì‡¼í•‘ ë©”ë‰´</p>
           <p class="footer_text">
-            <a href="#" id="shopping_text">ÀÚÁÖ ¹¯´Â Áú¹®</a><br>
-            <a href="#" id="shopping_text">¹®ÀÇ °Ô½ÃÆÇ</a>
+            <a href="#" id="shopping_text">ìžì£¼ ë¬»ëŠ” ì§ˆë¬¸</a><br>
+            <a href="#" id="shopping_text">ë¬¸ì˜ ê²Œì‹œíŒ</a>
           </p>
         </div>
         <div class="SNS">
