--- a/capstone-design/JSP/index.html
+++ b/capstone-design/JSP/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="nav_top">
           <span class="quick_menu"><a href="member/login.jsp">로그인</a></span>
-          <span class="quick_menu"><a href="">회원가입</a></span>
+          <span class="quick_menu"><a href="member/insertMember.jsp">회원가입</a></span>
           <span class="quick_menu"><a href="">고객센터</a></span>
         </div>
     </div>
