메인페이지 업데이트

--- a/capstone-design/JSP/cart/cart3.html
+++ b/capstone-design/JSP/cart/cart3.html
@@ -9,7 +9,7 @@
 <head>
   <!-- <meta charset="EUC-KR"> -->
   <title>주문 상세 확인</title>
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/style2.css">
   <link rel="stylesheet" href="../../css/cart.css">
 </head>
 
@@ -20,9 +20,7 @@
 	%> 
 	//.jsp로 변환 시 해당 줄 삭제 -->
   <div class="wrap">
-    <div class="headerTitle">
-      <a href="../../index.jsp"><img class="logo" src="../../images/logo.png" alt=""> </a>
-    </div>
+
     <div id="header">
       <div class="formbox">
         <input type="text" placeholder="검색">
