--- a/capstone-design/JSP/cart/test01.html
+++ b/capstone-design/JSP/cart/test01.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-<title>¹è¼Û/°áÁ¦</title>
+<title>ë°°ì†¡/ê²°ì œ</title>
 <link rel="stylesheet" href="../../css/style.css">
 <link rel="stylesheet" href="../../css/cart.css">
 
@@ -23,39 +23,39 @@
 		<div id="header">
 			<div class="formbox">
 				<h1 class="logo">
-					<a href="#"> <span class="blind">µÎÀÜ</span>
+					<a href="#"> <span class="blind">ë‘ìž”</span>
 					</a>
 				</h1>
 				<div class="topmenuWrap">
 					<ul class="topmenu">
-						<li><a>Ä¸½¶ Ä¿½ºÅÒ</a></li>
-						<li><a>µÎÀÜ Ä¸½¶</a>
+						<li><a>ìº¡ìŠ ì»¤ìŠ¤í…€</a></li>
+						<li><a>ë‘ìž” ìº¡ìŠ</a>
 							<div class="submenu">
 								<ul id="productMenu">
-									<li><a href="./goods/viewProduct.jsp?ctgType=season">½ÃÁðÇÑÁ¤</a></li>
-									<li><a href="./goods/viewProduct.jsp?ctgType=signature">½Ã±×´ÏÃ³</a></li>
-									<li><a href="./goods/viewProduct.jsp?ctgType=blending">ºí·»µù</a></li>
-									<li><a href="./goods/viewProduct.jsp?ctgType=original">¿À¸®Áö³Î</a></li>
-									<li><a href="./goods/viewProduct.jsp?ctgType=decaf">µðÄ«ÆäÀÎ</a></li>
-									<li><a href="./goods/viewProduct.jsp?ctgType=beveridge">º£¹ö¸®Áö
-											/ ³íÄ¿ÇÇ</a></li>
-									<li><a href="">¼±¹° ÆÐÅ°Áö</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=season">ì‹œì¦Œí•œì •</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=signature">ì‹œê·¸ë‹ˆì²˜</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=blending">ë¸”ë Œë”©</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=original">ì˜¤ë¦¬ì§€ë„</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=decaf">ë””ì¹´íŽ˜ì¸</a></li>
+									<li><a href="./goods/viewProduct.jsp?ctgType=beveridge">ë² ë²„ë¦¬ì§€
+											/ ë…¼ì»¤í”¼</a></li>
+									<li><a href="">ì„ ë¬¼ íŒ¨í‚¤ì§€</a></li>
 								</ul>
 							</div></li>
-						<li><a>Ä¿ÇÇ ÀÌ¾ß±â</a>
+						<li><a>ì»¤í”¼ ì´ì•¼ê¸°</a>
 							<div class="submenu">
 								<ul id="productMenu">
-									<li><a href="#">Ä¸½¶ Á¶ÇÕ ¸®ºä</a></li>
-									<li><a href="#">¿øµÎ¼Ò°³</a></li>
-									<li><a href="#">Ä¿ÇÇ ÀÀ¿ë ·¹½ÃÇÇ</a></li>
-									<li><a href="#">³ª¿Í ¾î¿ï¸®´Â Ä¿ÇÇ</a></li>
+									<li><a href="#">ìº¡ìŠ ì¡°í•© ë¦¬ë·°</a></li>
+									<li><a href="#">ì›ë‘ì†Œê°œ</a></li>
+									<li><a href="#">ì»¤í”¼ ì‘ìš© ë ˆì‹œí”¼</a></li>
+									<li><a href="#">ë‚˜ì™€ ì–´ìš¸ë¦¬ëŠ” ì»¤í”¼</a></li>
 								</ul>
 							</div></li>
-						<li><a>µÎÀÜ ÀÌ¾ß±â</a>
+						<li><a>ë‘ìž” ì´ì•¼ê¸°</a>
 							<div class="submenu">
 								<ul id="productMenu">
-									<li><a href="#">µÎ ÀÜÀÇ ¿©À¯</a></li>
-									<li><a href="#">µÎ ÀÜÀÇ È¯°æ°¡Ä¡</a></li>
+									<li><a href="#">ë‘ ìž”ì˜ ì—¬ìœ </a></li>
+									<li><a href="#">ë‘ ìž”ì˜ í™˜ê²½ê°€ì¹˜</a></li>
 								</ul>
 							</div></li>
 					</ul>
@@ -64,15 +64,15 @@
 					<%
 						if (id == null) {
 					%>
-					<span class="quick_menu"><a href="">·Î±×ÀÎ</a></span> <span
-						class="quick_menu"><a href="">È¸¿ø°¡ÀÔ</a></span> <span
-						class="quick_menu"><a href="">°í°´¼¾ÅÍ</a></span>
+					<span class="quick_menu"><a href="">ë¡œê·¸ì¸</a></span> <span
+						class="quick_menu"><a href="">íšŒì›ê°€ìž…</a></span> <span
+						class="quick_menu"><a href="">ê³ ê°ì„¼í„°</a></span>
 					<%
 						} else {
 					%>
-					<span class="quick_menu"><a href="../member/logout.jsp">·Î±×¾Æ¿ô</a></span>
-					<span class="quick_menu"><a href="">¸¶ÀÌÆäÀÌÁö</a></span> <span
-						class="quick_menu"><a href="">°í°´¼¾ÅÍ</a></span>
+					<span class="quick_menu"><a href="../member/logout.jsp">ë¡œê·¸ì•„ì›ƒ</a></span>
+					<span class="quick_menu"><a href="">ë§ˆì´íŽ˜ì´ì§€</a></span> <span
+						class="quick_menu"><a href="">ê³ ê°ì„¼í„°</a></span>
 					<%
 						}
 					%>
@@ -80,35 +80,35 @@
 			</div>
 		</div>
 
-		<!-- ÄÁÅÙÃ÷ -->
+		<!-- ì»¨í…ì¸  -->
 		<div class="cart_container" name="cart_product">
-			<!-- ³×ºñ°ÔÀÌ¼Ç Çì´õ -->
+			<!-- ë„¤ë¹„ê²Œì´ì…˜ í—¤ë” -->
 			<div class="cart_section1" name="cart_header">
 				<div class="cart_headerTitle">
-					<div class="cart_subTilte">ÁÖ¹®/°áÁ¦</div>
+					<div class="cart_subTilte">ì£¼ë¬¸/ê²°ì œ</div>
 					<br>
 					<br>
 				</div>
 			</div>
 
 			<div class="cart_content">
-				<!-- ´Ü°è ÁøÇàµµ -->
+				<!-- ë‹¨ê³„ ì§„í–‰ë„ -->
 				<div class="stepper-wrapper">
 					<div class="stepper-item completed">
 						<div class="step-counter">1</div>
-						<div class="step-name">Àå¹Ù±¸´Ï</div>
+						<div class="step-name">ìž¥ë°”êµ¬ë‹ˆ</div>
 					</div>
 					<div class="stepper-item completed">
 						<div class="step-counter">2</div>
-						<div class="step-name">¹è¼ÛÁö ¹× °áÁ¦ Á¤º¸ ÀÔ·Â</div>
+						<div class="step-name">ë°°ì†¡ì§€ ë° ê²°ì œ ì •ë³´ ìž…ë ¥</div>
 					</div>
 					<div class="stepper-item">
 						<div class="step-counter">3</div>
-						<div class="step-name">ÁÖ¹® »ó¼¼ ³»¿ª È®ÀÎ</div>
+						<div class="step-name">ì£¼ë¬¸ ìƒì„¸ ë‚´ì—­ í™•ì¸</div>
 					</div>
 					<div class="stepper-item">
 						<div class="step-counter">4</div>
-						<div class="step-name">ÁÖ¹® ¿Ï·á ¹× È®ÀÎ</div>
+						<div class="step-name">ì£¼ë¬¸ ì™„ë£Œ ë° í™•ì¸</div>
 					</div>
 				</div>
 			</div>
@@ -122,23 +122,19 @@
 			Connection con = DriverManager.getConnection(DB_URL, DB_ID, DB_PASSWORD);
 			%>
 
-			<!-- ÁÖ¹® / °áÁ¦ Á¤º¸ ÀÔ·Â -->
+			<!-- ì£¼ë¬¸ / ê²°ì œ ì •ë³´ ìž…ë ¥ -->
 			<div class="cart_Info">
 				<form name="orderInfo" method="post" action="order2.jsp">
 					<div class="recycleCap">
-						<label for="recycle_rq"> <img
-							src="../../images/recycle/recycle_rq.png">
-							<p>
-								<span>Ä¿ÇÇ ÇÑ ÀÜÀ¸·Î ½ÇÃµÇÏ´Â ±âÈÄµ¿Çà!</span>
-								<br>»ç¿ëÇÏ½Å Ä¸½¶À» ÀçÈ°¿ë ¹é ¾È¿¡ ³Ö¾îÁÖ¼¼¿ä.
-								<br>´ÙÀ½ ¹è¼ÛÀÏÀÚ¿¡ ¸ÂÃß¾î ±â»ç´ÔÀÌ ÀçÈ°¿ë ¹éÀ» ¼ö°ÅÇØµå¸³´Ï´Ù.
-							</p> <input type="checkbox" name="recycle" value="recycle"
+	
+							<input type="checkbox">
+							
+						<input type="checkbox" name="recycle" value="recycle"
 							id="recycleCheckbox">
-						</label>
 					</div>
 
 					<div class="cart_section2">
-						<div class="cart_title">ÁÖ¹®ÀÚ Á¤º¸(³» Á¤º¸ ±×´ë·Î ºÒ·¯¿À±â. ¼öÁ¤ ºÒ°¡.)</div>
+						<div class="cart_title">ì£¼ë¬¸ìž ì •ë³´(ë‚´ ì •ë³´ ê·¸ëŒ€ë¡œ ë¶ˆëŸ¬ì˜¤ê¸°. ìˆ˜ì • ë¶ˆê°€.)</div>
 						<%
 							String myid = (String) session.getAttribute("sid");
 
@@ -155,61 +151,61 @@
 						%>
 						<div class="cartWrap">
 							<div class="cart_cont">
-								<div class="cart_wrap_title">ÁÖ¹®ÀÚ</div>
+								<div class="cart_wrap_title">ì£¼ë¬¸ìž</div>
 								<div class="cart_wrap_wrap"><%=name%></div>
 							</div>
 							<div class="cart_cont">
-								<div class="cart_wrap_title">ÀüÈ­¹øÈ£</div>
+								<div class="cart_wrap_title">ì „í™”ë²ˆí˜¸</div>
 								<div class="cart_wrap_wrap"><%=tel%></div>
 							</div>
 							<div class="cart_cont">
-								<div class="cart_wrap_title">ÀÌ¸ÞÀÏ</div>
+								<div class="cart_wrap_title">ì´ë©”ì¼</div>
 								<div class="cart_wrap_wrap"><%=email%></div>
 							</div>
 						</div>
 					</div>
 
 					<div class="cart_section3">
-						<div class="cart_title">¹è¼ÛÁö Á¤º¸(³» Á¤º¸¸¦ °¡Á®¿ÀµÇ ¼öÁ¤ °¡´ÉÇÏ°Ô)</div>
+						<div class="cart_title">ë°°ì†¡ì§€ ì •ë³´(ë‚´ ì •ë³´ë¥¼ ê°€ì ¸ì˜¤ë˜ ìˆ˜ì • ê°€ëŠ¥í•˜ê²Œ)</div>
 						<div class="cartWrap">
-							<th>¹Þ´Â »ç¶÷<br> <input type="text" name="name" id="name"
-								placeholder="ÀÌ¸§À» ÀÔ·ÂÇØÁÖ¼¼¿ä"><br>
+							<th>ë°›ëŠ” ì‚¬ëžŒ<br> <input type="text" name="name" id="name"
+								placeholder="ì´ë¦„ì„ ìž…ë ¥í•´ì£¼ì„¸ìš”"><br>
 							</th>
-							<th>¹øÈ£<br> <input type="text" name="tel1" id="tel1"
-								placeholder="ÈÞ´ëÆù" maxlength='3'> <input type="text"
-								name="tel2" id="tel2" placeholder="¹øÈ£¸¦" maxlength='4'> <input
-								type="text" name="tel3" id="tel3" placeholder="ÀÔ·ÂÇØÁÖ¼¼¿ä"
+							<th>ë²ˆí˜¸<br> <input type="text" name="tel1" id="tel1"
+								placeholder="íœ´ëŒ€í°" maxlength='3'> <input type="text"
+								name="tel2" id="tel2" placeholder="ë²ˆí˜¸ë¥¼" maxlength='4'> <input
+								type="text" name="tel3" id="tel3" placeholder="ìž…ë ¥í•´ì£¼ì„¸ìš”"
 								maxlength='4'><br>
 							</th>
-							<th>ÁÖ¼Ò<br>
+							<th>ì£¼ì†Œ<br>
 							<input type="text" name="zipNo" id="zipNo"
-								placeholder="¿ìÆí¹øÈ£¸¦ ÀÔ·ÂÇØÁÖ¼¼¿ä">
+								placeholder="ìš°íŽ¸ë²ˆí˜¸ë¥¼ ìž…ë ¥í•´ì£¼ì„¸ìš”">
 								<button type="button" class="findZipNo"
-									onclick="DaumPostcode();">¿ìÆí¹øÈ£ Ã£±â</button>
+									onclick="DaumPostcode();">ìš°íŽ¸ë²ˆí˜¸ ì°¾ê¸°</button>
 								<br> <input type="text" name="address" id="address"
-								placeholder="±âº»ÁÖ¼Ò¸¦ ÀÔ·ÂÇØÁÖ¼¼¿ä"> <input type="text"
-								name="addrplus" id="addrplus" placeholder="ÁÖ¼Ò Âü°íÇ×¸ñÀ» ÀÔ·ÂÇØÁÖ¼¼¿ä"><br>
+								placeholder="ê¸°ë³¸ì£¼ì†Œë¥¼ ìž…ë ¥í•´ì£¼ì„¸ìš”"> <input type="text"
+								name="addrplus" id="addrplus" placeholder="ì£¼ì†Œ ì°¸ê³ í•­ëª©ì„ ìž…ë ¥í•´ì£¼ì„¸ìš”"><br>
 								<input type="text" name="addressdetail" id="addressdetail"
-								placeholder="»ó¼¼ÁÖ¼Ò¸¦ ÀÔ·ÂÇØÁÖ¼¼¿ä">
+								placeholder="ìƒì„¸ì£¼ì†Œë¥¼ ìž…ë ¥í•´ì£¼ì„¸ìš”">
 							</th>
 						</div>
 					</div>
 
 					<div class="cart_section4">
-						<div class="cart_title">°áÁ¦ ¼ö´Ü</div>
+						<div class="cart_title">ê²°ì œ ìˆ˜ë‹¨</div>
 						<div class="cartWrap">
 							<tr class="cart_payInfo">
-								<th><span>°áÁ¦ ¼ö´Ü</span></th>
+								<th><span>ê²°ì œ ìˆ˜ë‹¨</span></th>
 							</tr>
 							<tr>
 								<th>
 									<p>
 										<label> <input type="radio" name="payment"
-											value="½Å¿ëÄ«µå" id="card"> ½Å¿ëÄ«µå
+											value="ì‹ ìš©ì¹´ë“œ" id="card"> ì‹ ìš©ì¹´ë“œ
 										</label> <br> <label> <input type="radio" name="payment"
-											value="Ä«Ä«¿ÀÆäÀÌ" id="kakao"> Ä«Ä«¿ÀÆäÀÌ
+											value="ì¹´ì¹´ì˜¤íŽ˜ì´" id="kakao"> ì¹´ì¹´ì˜¤íŽ˜ì´
 										</label> <br> <label> <input type="radio" name="payment"
-											value="¹«ÅëÀåÀÔ±Ý" id="bank"> ¹«ÅëÀåÀÔ±Ý
+											value="ë¬´í†µìž¥ìž…ê¸ˆ" id="bank"> ë¬´í†µìž¥ìž…ê¸ˆ
 										</label> <br>
 									</p>
 								</th>
@@ -218,60 +214,60 @@
 					</div>
 
 					<div class="cart_Info_button">
-						<input type="button" class="btn_backPage" value="<  Àå¹Ù±¸´Ï »ó¼¼·Î µ¹¾Æ°¡±â">
-						<input type="button" class="btn_nextPage" value="´ÙÀ½ ´Ü°è·Î  >"
+						<input type="button" class="btn_backPage" value="<  ìž¥ë°”êµ¬ë‹ˆ ìƒì„¸ë¡œ ëŒì•„ê°€ê¸°">
+						<input type="button" class="btn_nextPage" value="ë‹¤ìŒ ë‹¨ê³„ë¡œ  >"
 							onclick="submitForm()">
 					</div>
 				</form>
 			</div>
 
-			<!-- ÇªÅÍ -->
+			<!-- í‘¸í„° -->
 			<footer>
 				<div class="footer1">
 					<ul>
-						<li><a href="">È¸»ç¼Ò°³</a></li>
-						<li><a href="">ÀÌ¿ë¾à°ü</a></li>
-						<li><a href="">°³ÀÎÁ¤º¸Ãë±Þ¹æÄ§ </a></li>
-						<li><a href="">°í°´¼¾ÅÍ</a></li>
+						<li><a href="">íšŒì‚¬ì†Œê°œ</a></li>
+						<li><a href="">ì´ìš©ì•½ê´€</a></li>
+						<li><a href="">ê°œì¸ì •ë³´ì·¨ê¸‰ë°©ì¹¨ </a></li>
+						<li><a href="">ê³ ê°ì„¼í„°</a></li>
 					</ul>
 				</div>
 				<div class="footer2">
 					<div class="call_center">
-						<p class="footer_title">°í°´¸¸Á·¼¾ÅÍ</p>
+						<p class="footer_title">ê³ ê°ë§Œì¡±ì„¼í„°</p>
 						<p class="footer_text">
 							<span class="tell"><img src="../images/tell.png" alt=""></span><span
 								id="tell_number">02-456-789</span><br> <span
-								class="footer_bold">»ó´ã½Ã°£ </span>10:00 ~ 18:00<br> <span
-								class="footer_bold">¹®ÀÚ»ó´ã </span>Ä«Ä«¿ÀÅå ÇÃ·¯½º Ä£±¸ µî·Ï<br> ¹ÝÇ° ¾È³»´Â
-							ÇØ´ç »óÇ° ÆäÀÌÁö¸¦ Âü°íÇØÁÖ¼¼¿ä
+								class="footer_bold">ìƒë‹´ì‹œê°„ </span>10:00 ~ 18:00<br> <span
+								class="footer_bold">ë¬¸ìžìƒë‹´ </span>ì¹´ì¹´ì˜¤í†¡ í”ŒëŸ¬ìŠ¤ ì¹œêµ¬ ë“±ë¡<br> ë°˜í’ˆ ì•ˆë‚´ëŠ”
+							í•´ë‹¹ ìƒí’ˆ íŽ˜ì´ì§€ë¥¼ ì°¸ê³ í•´ì£¼ì„¸ìš”
 						</p>
 					</div>
 
 					<div class="company">
-						<p class="footer_title">È¸»ç Á¤º¸</p>
+						<p class="footer_title">íšŒì‚¬ ì •ë³´</p>
 						<p class="footer_text">
-							<span class="footer_bold">È¸»ç¸í</span>(ÁÖ)µÎÀÜ / µÎ ÀÜÀÇ ¿©À¯<br> <span
-								class="footer_bold">´ëÇ¥</span>¼­¹ÎÈñ<br> <span
-								class="footer_bold">´ëÇ¥ÀüÈ­</span>02-456-789<br> <span
-								class="footer_bold">ÁÖ¼Ò</span>¼­¿ïÆ¯º°½Ã ¸¶Æ÷±¸<br> <span
-								class="footer_bold">ÀÌ¸ÞÀÏ</span>alslalsl_06@naver.com<br>
+							<span class="footer_bold">íšŒì‚¬ëª…</span>(ì£¼)ë‘ìž” / ë‘ ìž”ì˜ ì—¬ìœ <br> <span
+								class="footer_bold">ëŒ€í‘œ</span>ì„œë¯¼í¬<br> <span
+								class="footer_bold">ëŒ€í‘œì „í™”</span>02-456-789<br> <span
+								class="footer_bold">ì£¼ì†Œ</span>ì„œìš¸íŠ¹ë³„ì‹œ ë§ˆí¬êµ¬<br> <span
+								class="footer_bold">ì´ë©”ì¼</span>alslalsl_06@naver.com<br>
 						</p>
 					</div>
 
 					<div class="delivery">
-						<p class="footer_title">¹è¼Û¾È³»</p>
+						<p class="footer_title">ë°°ì†¡ì•ˆë‚´</p>
 						<p class="footer_text">
-							CJ ´ëÇÑÅë¿î(TEL 1588-4321)<br> ¹è¼Û »óÈ²Àº ÅÃ¹è»ç È¨ÆäÀÌÁö¸¦ ÂüÁ¶ÇØÁÖ¼¼¿ä<br>
-							<a href="#">¹è¼Û »óÈ² È®ÀÎÇÏ±â></a>
+							CJ ëŒ€í•œí†µìš´(TEL 1588-4321)<br> ë°°ì†¡ ìƒí™©ì€ íƒë°°ì‚¬ í™ˆíŽ˜ì´ì§€ë¥¼ ì°¸ì¡°í•´ì£¼ì„¸ìš”<br>
+							<a href="#">ë°°ì†¡ ìƒí™© í™•ì¸í•˜ê¸°></a>
 						</p>
 					</div>
 				</div>
 				<div class="footer3">
 					<div class="shopping_menu">
-						<p class="footer_title">¼îÇÎ ¸Þ´º</p>
+						<p class="footer_title">ì‡¼í•‘ ë©”ë‰´</p>
 						<p class="footer_text">
-							<a href="#" id="shopping_text">ÀÚÁÖ ¹¯´Â Áú¹®</a><br> <a href="#"
-								id="shopping_text">¹®ÀÇ °Ô½ÃÆÇ</a>
+							<a href="#" id="shopping_text">ìžì£¼ ë¬»ëŠ” ì§ˆë¬¸</a><br> <a href="#"
+								id="shopping_text">ë¬¸ì˜ ê²Œì‹œíŒ</a>
 						</p>
 					</div>
 					<div class="SNS">
@@ -301,11 +297,11 @@
 		<script src="../../JS/navEvent.js"></script>
 		<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 		<script>
-			// ÀçÈ°¿ë °ª ³Ñ±â±â
+			// ìž¬í™œìš© ê°’ ë„˜ê¸°ê¸°
 			var recycleCheckbox = document.getElementById("recycleCheckbox");
 
 			recycleCheckbox.addEventListener("change", function() {
-				// Ã¼Å©µÇ¾ú´ÂÁö È®ÀÎ
+				// ì²´í¬ë˜ì—ˆëŠ”ì§€ í™•ì¸
 
 				if (recycleCheckbox.checked) {
 					recycleCheckbox.value = "recycle";
