custome, main update

--- a/capstone-design/JSP/index.html
+++ b/capstone-design/JSP/index.html
@@ -10,6 +10,9 @@
 <body>
   <div id="wrap">
     <canvas id="canvas" class="webgl"></canvas>
+    <div id="headerBtn" class="headerBtn">
+
+    </div>
     <div id="header">
       <div class="formbox">
         <a href="./index.html">
@@ -77,6 +80,7 @@
       <div id="section1-1">
         <div class="cont">
           <img class="section1-1_wrap" src="../images/section1-1.png" alt="">
+          <img class="section1-1_mobile_wrap" src="../images/section1-1_mobile.png" alt="">
         </div>
       </div>
       <div id="section3">
@@ -221,23 +225,27 @@
             <h2>두잔 베스트 캡슐</h2>
           </div>
           <div class="bestGoodsList">
-            <div class="listSection1">
-              <a href=""><img class="bestGoods" src="../images/softBlending.png" alt="" data-aos="fade-left"
-     data-aos-duration="500"></a>
-              <a href=""><img class="bestGoods" src="../images/AA.png" alt="" data-aos="fade-left" data-aos-duration="600"></a>
-              <img class="bestGoods_capsule1" src="../images/model02_3.png" alt="">
-              <img class="bestGoods_capsule2" src="../images/model02_4.png" alt="">
-            </div>
-            <div class="listSection2">
-              <img class="gabe" src="../images/gabe.png" alt="">
-              <a href=""><img class="bestGoods" src="../images/blueMountin.png" alt="" data-aos="fade-left" data-aos-duration="700"></a>
-              <a href=""><img class="bestGoods" src="../images/blueMountin.png" alt="" data-aos="fade-left" data-aos-duration="800"></a>
-              <a href=""><img class="bestGoods" src="../images/cocoa.png" alt="" data-aos="fade-left" data-aos-duration="900"></a>
-              <img class="bestGoods_capsule3" src="../images/model04_6.png" alt="">
-            </div>
-
-            
-          </div>
+						<div class="listSection1">
+							<a href=""><img class="bestGoods"
+								src="../images/bestgoods1.png" alt="" data-aos="fade-left"
+								data-aos-duration="500"></a> <a href=""><img
+								class="bestGoods" src="../images/bestgoods5.png" alt=""
+								data-aos="fade-left" data-aos-duration="600"></a> <img
+								class="bestGoods_capsule1" src="../images/model02_3.png" alt="">
+							<img class="bestGoods_capsule2" src="../images/model02_4.png"
+								alt="">
+						</div>
+						<div class="listSection2">
+							<img class="gabe" src="../images/gabe.png" alt=""> <a
+								href=""><img class="bestGoods"
+								src="../images/bestgoods2.png" alt="" data-aos="fade-left"
+								data-aos-duration="700"></a> <a href=""><img
+								class="bestGoods" src="../images/bestgoods3.png" alt=""
+								data-aos="fade-left" data-aos-duration="800"></a> <a href=""><img
+								class="bestGoods" src="../images/bestgoods6.png" alt=""
+								data-aos="fade-left" data-aos-duration="900"></a> <img
+								class="bestGoods_capsule3" src="../images/model04_6.png" alt="">
+						</div>
         </div>
       </div>
     </div>
