--- a/capstone-design/JSP/goods/custome.html
+++ b/capstone-design/JSP/goods/custome.html
@@ -153,7 +153,7 @@
 
               <div id="select-coffee-explain"></div>
               <div class="coffee-progress">
-                <div class="progress-wrap">
+                <div class="custome-progress-wrap">
                   <h3 class="progress-name">
                     <strong>바디감</strong>
                   </h3>
@@ -163,7 +163,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="progress-wrap">
+                <div class="custome-progress-wrap">
                   <h3 class="progress-name">
                     <strong>향미</strong>
                   </h3>
@@ -173,7 +173,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="progress-wrap">
+                <div class="custome-progress-wrap">
                   <h3 class="progress-name">
                     <strong>신맛</strong>
                   </h3>
@@ -183,22 +183,22 @@
                     </div>
                   </div>
                 </div>
-                <div class="progress-wrap">
+                <div class="custome-progress-wrap">
                   <h3 class="progress-name">
                     <strong>쓴맛</strong>
                   </h3>
                   <div class="progress">
-                    <div id="taste2_progress" class="progress-bar color-3" role="progressbar" aria-valuenow="30"
+                    <div id="taste2_progress" class="progress-bar color-4" role="progressbar" aria-valuenow="30"
                       aria-valuemin="0" aria-valuemax="100" style="width:30%">
                     </div>
                   </div>
                 </div>
-                <div class="progress-wrap">
+                <div class="custome-progress-wrap">
                   <h3 class="progress-name">
                     <strong>단맛</strong>
                   </h3>
                   <div class="progress">
-                    <div id="taste3_progress" class="progress-bar color-3" role="progressbar" aria-valuenow="30"
+                    <div id="taste3_progress" class="progress-bar color-5" role="progressbar" aria-valuenow="30"
                       aria-valuemin="0" aria-valuemax="100" style="width:30%">
                     </div>
                   </div>
@@ -278,7 +278,7 @@
               <ul>
                 <li>
                   <div id="blend-checkbox">
-                    <input type="checkbox" id="blend_null" name="blendCoffee" onchange="updateSelectedOptions('선택안함')">
+                    <input type="checkbox" id="blend_null" name="blendCoffee" value="선택 안함" onchange="updateSelectedOptions('선택안함')">
                     <label for="blend_null" id="blendNULL"></label>
 
                     <input type="checkbox" id="브라질 산토스blend" name="blendCoffee" value="브라질 산토스"
@@ -425,6 +425,9 @@
         </div>
         <div class="result_background1"></div>
         <div class="result_background2"></div>
+        <img id="result_deco1" src="../../images/model02_5.png" alt="">
+        <img id="result_deco2" src="../../images/result_deco.png" alt="">
+        <img id="result_deco3" src="../../images/result_deco.png" alt="">
         <div class="result_background">
           <div class="cont">
           <div class="result_content">
@@ -472,9 +475,10 @@
               </div>
 
             </div>
+            
             <div id="hiddenInputRadio"></div>
             <div class="result_buttonWrap">
-              <a class="custome_btn" href="./custome.jsp">처음으로
+              <a class="custome_btn" href="./custome.jsp" id="reset">처음으로
                 돌아가기</a>
               <button class="custome_btn" onclick="checkCustomeValue()">장바구니에
                 담기</button>
