전체 링크 수정 및 자잘한 수정사항

--- a/capstone-design/JSP/index2.html
+++ b/capstone-design/JSP/index2.html
@@ -61,7 +61,7 @@
         <div class="nav_top">
           <span class="quick_menu"><a href="member/login.jsp">로그인</a></span>
           <span class="quick_menu"><a href="member/insertMember.jsp">회원가입</a></span>
-          <span class="quick_menu"><a href="">고객센터</a></span>
+          <span class="quick_menu"><a href="">장바구니</a></span>
         </div>
     </div>
 		</div>
