--- a/capstone-design/JSP/review/review_selectCustom.html
+++ b/capstone-design/JSP/review/review_selectCustom.html
@@ -20,10 +20,11 @@
 
 		<div id="header">
 			<div class="formbox">
-				<h1 class="logo">
-					<a href="#"> <span class="blind">두잔</span>
+				<a href="../index.jsp">
+					<h1 class="logo">
+						<span class="blind">두잔</span>
+					</h1>
 					</a>
-				</h1>
 				<div class="topmenuWrap">
 					<ul class="topmenu">
 						<li><a href="../goods/custome.jsp">캡슐 커스텀</a></li>
@@ -60,15 +61,14 @@
 					<%
 						if (id == null) {
 					%>
-					<span class="quick_menu"><a href="../member/login.jsp">로그인</a></span> <span
-						class="quick_menu"><a href="">회원가입</a></span> <span
-						class="quick_menu"><a href="">고객센터</a></span>
+					<span class="quick_menu"><a href="../member/login.jsp">로그인</a></span>
+					<span class="quick_menu"><a href="../member/insertMember.jsp">회원가입</a></span>
 					<%
 						} else {
 					%>
-					<span class="quick_menu"><a href="../member/logout.jsp">로그아웃</a></span>
-					<span class="quick_menu"><a href="">마이페이지</a></span> <span
-						class="quick_menu"><a href="">고객센터</a></span>
+					<span class="quick_menu"><a href="../member/mainlogout.jsp">로그아웃</a></span>
+					<span class="quick_menu"><a href="../mypage.jsp">마이페이지</a></span> <span
+						class="quick_menu"><a href="../cart/showcart.jsp">장바구니</a></span>
 					<%
 						}
 					%>
