관리자페이지 추가

--- a/capstone-design/JSP/manager/m_memberModify.html
+++ b/capstone-design/JSP/manager/m_memberModify.html
@@ -15,6 +15,9 @@
 		<section class="member" id="member">
 			<h2>회원 정보 관리</h2>
 			<h3>회원 정보 관리 수정</h3>
+			
+			<form name="" method="post" action="">
+				
 			<table>
 				<tr>
 					<th width="20%">회원명</th>
@@ -56,6 +59,8 @@
 			</table>
 			<a href="./m_main.html"><div class="btn_back">뒤로가기</div></a>
 			<a href="./m_member.html"><div class="btn_modify">정보 수정 완료</div></a>
+				
+			</form>
 			
 		</section>
 	
