관리자 추가 기능

--- a/capstone-design/JSP/manager/m_mainFrame.html
+++ b/capstone-design/JSP/manager/m_mainFrame.html
@@ -2,38 +2,39 @@
 <html>
 <head>
 <meta charset="euc-kr">
-<title>°ü¸®ÀÚ ÆäÀÌÁö</title> 
+<title>ê´€ë¦¬ìž íŽ˜ì´ì§€</title> 
 
 <link rel="stylesheet" href="../../css/manager.css">	
 </head>
 
-<!-- °ü¸®ÀÚ ÆäÀÌÁö ÇÁ·¹ÀÓ -->
+<!-- ê´€ë¦¬ìž íŽ˜ì´ì§€ í”„ë ˆìž„ -->
 	
 <body>
 	<div class="container">
 		
-	<!-- »çÀÌµå ¹Ù -->
+	<!-- ì‚¬ì´ë“œ ë°” -->
 	<div class="sidebar">
 		<div class="logo">
 			<img src="../../images/logo.png">
 		</div>
 		<ul>
-			<li><a href="./m_main.html#order" target="display-frame">ÁÖ¹® ³»¿ª °ü¸®</a></li>
-			<li><a href="./m_main.html#member" target="display-frame">È¸¿ø Á¤º¸ °ü¸®</a></li>
-			<li><a href="./m_main.html#review" target="display-frame">¸®ºä °ü¸®</a></li>
+			<li><a href="./m_main.html#order" target="display-frame">ì£¼ë¬¸ ë‚´ì—­ ê´€ë¦¬</a></li>
+			<li><a href="./m_main.html#member" target="display-frame">íšŒì› ì •ë³´ ê´€ë¦¬</a></li>
+			<li><a href="./m_main.html#review" target="display-frame">ë¦¬ë·° ê´€ë¦¬</a></li>
+			<li><a href="./m_main.html#chart_wrap" target="display-frame">íŒë§¤ í†µê³„</a></li>
 		</ul>
 		<div class="logout">
-			<span><a href="../index.jsp">°ü¸®ÀÚ ·Î±×¾Æ¿ô</a></span>
+			<span><a href="../index.jsp">ê´€ë¦¬ìž ë¡œê·¸ì•„ì›ƒ</a></span>
 		</div>
 	</div>
 	
-	<!-- ÄÜÅÙÃ÷ -->
+	<!-- ì½˜í…ì¸  -->
 	<div class="main">
 		<div class="title">
-			<h1>(ÀÌ¸§) °ü¸®ÀÚ ´Ô, È¯¿µÇÕ´Ï´Ù!</h1>
+			<h1>(ì´ë¦„) ê´€ë¦¬ìž ë‹˜, í™˜ì˜í•©ë‹ˆë‹¤!</h1>
 		</div>
 		
-	<!-- ¾ÆÀÌÇÁ·¹ÀÓ -->
+	<!-- ì•„ì´í”„ë ˆìž„ -->
 		<iframe name="display-frame" src="m_main.html"></iframe>
 	
 	</div>
