--- a/capstone-design/JSP/manager/m_memberModify.html
+++ b/capstone-design/JSP/manager/m_memberModify.html
@@ -2,63 +2,63 @@
 <html>
 <head>
 <meta charset="euc-kr">
-<title>°ü¸®ÀÚ ÆäÀÌÁö</title> 
+<title>ê´€ë¦¬ìž íŽ˜ì´ì§€</title> 
 
 <link rel="stylesheet" href="../../css/manager.css">
 	
 <script language="javascript" src="../dojan_js_package.js"></script>
 	
-<!-- °ü¸®ÀÚ ÆäÀÌÁö ÇÁ·¹ÀÓ ¾È¿¡ µé¾î°¥ ³»¿ë. È¸¿ø Á¤º¸ °ü¸® ¼öÁ¤. -->
+<!-- ê´€ë¦¬ìž íŽ˜ì´ì§€ í”„ë ˆìž„ ì•ˆì— ë“¤ì–´ê°ˆ ë‚´ìš©. íšŒì› ì •ë³´ ê´€ë¦¬ ìˆ˜ì •. -->
 </head>
 
 <body>
 		<section class="member" id="member">
-			<h2>È¸¿ø Á¤º¸ °ü¸®</h2>
-			<h3>È¸¿ø Á¤º¸ °ü¸® ¼öÁ¤</h3>
+			<h2>íšŒì› ì •ë³´ ê´€ë¦¬</h2>
+			<h3>íšŒì› ì •ë³´ ê´€ë¦¬ ìˆ˜ì •</h3>
 			
 			<form name="" method="post" action="">
 				
 			<table>
 				<tr>
-					<th width="20%">È¸¿ø¸í</th>
-					<td><input type="text" name="name" id="name" value="±èÃ¶¼ö"></td>
+					<th width="20%">íšŒì›ëª…</th>
+					<td><input type="text" name="name" id="name" value="ê¹€ì² ìˆ˜"></td>
 				</tr>
 				<tr>
-					<th>»ý³â¿ùÀÏ</th>
+					<th>ìƒë…„ì›”ì¼</th>
 					<td><input type="text" name="birth" id="birth" value="20020512" maxlength='8'></td>
 				</tr>
 				<tr>
-					<th>ÈÞ´ëÆù ¹øÈ£</th>
+					<th>íœ´ëŒ€í° ë²ˆí˜¸</th>
 					<td><input type="text" name="tel1" id="tel1" value="010" maxlength='3'>
 						<input type="text" name="tel2" id="tel2" value="1111" maxlength='4'> 
 						<input type="text" name="tel3" id="tel3" value="2222" maxlength='4'></td>
 				</tr>
 				<tr>
-					<th>¾ÆÀÌµð</th>
+					<th>ì•„ì´ë””</th>
 					<td>kim123</td>
 				</tr>
 				<tr>
-					<th>ÆÐ½º¿öµå</th>
+					<th>íŒ¨ìŠ¤ì›Œë“œ</th>
 					<td><input type="password" name="pwd" id="pwd" value="kimpwd123"></td>
 				</tr>
 				<tr>
-					<th>ÀÌ¸ÞÀÏ</th>
+					<th>ì´ë©”ì¼</th>
 					<td><input type="text" name="email" id="email" value="kim123@naver.com"></td>
 				</tr>
 				<tr>
-					<th>¿ìÆí¹øÈ£</th>
+					<th>ìš°íŽ¸ë²ˆí˜¸</th>
 					<td><input type="text" name="zipNo" id="zipNo" value="31020" readonly>
-						<button type="button" onclick="DaumPostcode();">¿ìÆí¹øÈ£ Ã£±â</button></td>
+						<button type="button" onclick="DaumPostcode();">ìš°íŽ¸ë²ˆí˜¸ ì°¾ê¸°</button></td>
 				</tr>
 				<tr>
-					<th>ÁÖ¼Ò</th>
-					<td><input type="text" name="address" id="address" value="Ãæ³² Ãµ¾È½Ã ¼­ºÏ±¸ ¼ºÈ¯À¾ ´ëÇÐ·Î 91"><br>
-						<input type="text" name="addrplus" id="addrplus" value="(³²¼­¿ï´ëÇÐ±³)"><br>
-						<input type="text" name="addressdetail" id="addressdetail" value="º»°ü 1Ãþ"></td>
+					<th>ì£¼ì†Œ</th>
+					<td><input type="text" name="address" id="address" value="ì¶©ë‚¨ ì²œì•ˆì‹œ ì„œë¶êµ¬ ì„±í™˜ì ëŒ€í•™ë¡œ 91"><br>
+						<input type="text" name="addrplus" id="addrplus" value="(ë‚¨ì„œìš¸ëŒ€í•™êµ)"><br>
+						<input type="text" name="addressdetail" id="addressdetail" value="ë³¸ê´€ 1ì¸µ"></td>
 				</tr>
 			</table>
-			<a href="./m_main.html"><div class="btn_back">µÚ·Î°¡±â</div></a>
-			<a href="./m_member.html"><div class="btn_modify">Á¤º¸ ¼öÁ¤ ¿Ï·á</div></a>
+			<a href="./m_main.html"><div class="btn_back">ë’¤ë¡œê°€ê¸°</div></a>
+			<a href="./m_member.html"><div class="btn_modify">ì •ë³´ ìˆ˜ì • ì™„ë£Œ</div></a>
 				
 			</form>
 			
