--- a/capstone-design/JSP/manager/m_customOrder.html
+++ b/capstone-design/JSP/manager/m_customOrder.html
@@ -2,58 +2,58 @@
 <html>
 <head>
 <meta charset="euc-kr">
-<title>°ü¸®ÀÚ ÆäÀÌÁö</title> 
+<title>ê´€ë¦¬ìž íŽ˜ì´ì§€</title> 
 
 <link rel="stylesheet" href="../../css/manager.css">	
 	
-<!-- °ü¸®ÀÚ ÆäÀÌÁö ÇÁ·¹ÀÓ ¾È¿¡ µé¾î°¥ ³»¿ë. Ä¿½ºÅÒ Ä¸½¶ ÁÖ¹® ³»¿ª »ó¼¼ Á¶È¸. -->
+<!-- ê´€ë¦¬ìž íŽ˜ì´ì§€ í”„ë ˆìž„ ì•ˆì— ë“¤ì–´ê°ˆ ë‚´ìš©. ì»¤ìŠ¤í…€ ìº¡ìŠ ì£¼ë¬¸ ë‚´ì—­ ìƒì„¸ ì¡°íšŒ. -->
 </head>
 
 <body>
 		<section class="order" id="order">
-			<h2>ÁÖ¹® ³»¿ª °ü¸®</h2>
+			<h2>ì£¼ë¬¸ ë‚´ì—­ ê´€ë¦¬</h2>
 			
-			<h3>Ä¿½ºÅÒ Ä¸½¶ ÁÖ¹® ³»¿ª »ó¼¼ Á¶È¸</h3>
+			<h3>ì»¤ìŠ¤í…€ ìº¡ìŠ ì£¼ë¬¸ ë‚´ì—­ ìƒì„¸ ì¡°íšŒ</h3>
 			<table>
 				<tr>
-					<th width="20%">ÁÖ¹® ³¯Â¥</th>
-					<td>2024. 3. 16. ¿ÀÀü 5:54:55</td>
+					<th width="20%">ì£¼ë¬¸ ë‚ ì§œ</th>
+					<td>2024. 3. 16. ì˜¤ì „ 5:54:55</td>
 				</tr>
 				<tr>
-					<th>³» Ä¿½ºÅÒ ÀÌ¸§</th>
-					<td>Åð±Ù ÈÄ ÇÑÀÜ</td>
+					<th>ë‚´ ì»¤ìŠ¤í…€ ì´ë¦„</th>
+					<td>í‡´ê·¼ í›„ í•œìž”</td>
 				</tr>
 				<tr>
-					<th>º£ÀÌ½º ¿øµÎ</th>
-					<td>¿¡Æ¼¿ÀÇÇ¾Æ ¿¹°¡Ã¼ÇÁ</td>
+					<th>ë² ì´ìŠ¤ ì›ë‘</th>
+					<td>ì—í‹°ì˜¤í”¼ì•„ ì˜ˆê°€ì²´í”„</td>
 				</tr>
 				<tr>
-					<th>ºí·»µå ¿øµÎ</th>
-					<td>ÀÚ¸ÞÀÌÄ« ºí·ç¸¶¿îÆ¾, ÄÚ½ºÅ¸¸®Ä« µû¶óÁÖ, ¿¹¸à ¸ðÄ« ¸¶Å¸¸®</td>
+					<th>ë¸”ë Œë“œ ì›ë‘</th>
+					<td>ìžë©”ì´ì¹´ ë¸”ë£¨ë§ˆìš´í‹´, ì½”ìŠ¤íƒ€ë¦¬ì¹´ ë”°ë¼ì£¼, ì˜ˆë©˜ ëª¨ì¹´ ë§ˆíƒ€ë¦¬</td>
 				</tr>
 				<tr>
-					<th>·Î½ºÆÃ ´Ü°è</th>
-					<td>6´Ü°è</td>
+					<th>ë¡œìŠ¤íŒ… ë‹¨ê³„</th>
+					<td>6ë‹¨ê³„</td>
 				</tr>
 				<tr>
-					<th>Ä¿ÇÇ ¸Ó½Å</th>
-					<td>³×½ºÇÁ·¹¼Ò ¿À¸®Áö³Î</td>
+					<th>ì»¤í”¼ ë¨¸ì‹ </th>
+					<td>ë„¤ìŠ¤í”„ë ˆì†Œ ì˜¤ë¦¬ì§€ë„</td>
 				</tr>
 				<tr>
-					<th>ÆÇ¸Å °¡°Ý</th>
-					<td>13,900 ¿ø</td>
+					<th>íŒë§¤ ê°€ê²©</th>
+					<td>13,900 ì›</td>
 				</tr>
 				<tr>
-					<th>»óÇ° ¼ö·®</th>
-					<td>2 °³</td>
+					<th>ìƒí’ˆ ìˆ˜ëŸ‰</th>
+					<td>2 ê°œ</td>
 				</tr>
 				<tr>
-					<th>ÃÑ ÁÖ¹® ±Ý¾×</th>
-					<td>27,800 ¿ø</td>
+					<th>ì´ ì£¼ë¬¸ ê¸ˆì•¡</th>
+					<td>27,800 ì›</td>
 				</tr>
 			</table>
-			<a href="./m_main.html"><div class="btn_back">µÚ·Î°¡±â</div></a>
-			<a href=""><div class="btn_delete">ÁÖ¹® »èÁ¦</div></a>
+			<a href="./m_main.html"><div class="btn_back">ë’¤ë¡œê°€ê¸°</div></a>
+			<a href=""><div class="btn_delete">ì£¼ë¬¸ ì‚­ì œ</div></a>
 			
 		</section>
 </body>
